Added a graph with a sum of order values to administration dashboard

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -883,3 +883,13 @@ services:
     App\Component\LuigisBox\LuigisBoxApiKeysProvider:
         arguments:
             $keys: '%luigis_box%'
+
+    Shopsys\FrameworkBundle\Model\Statistics\StatisticsRepository: '@App\Model\Statistics\StatisticsRepository'
+
+    App\Model\Statistics\ValueByDateTimeDataPointFormatter: ~
+
+    Shopsys\FrameworkBundle\Model\Statistics\ValueByDateTimeDataPointFormatter: '@App\Model\Statistics\ValueByDateTimeDataPointFormatter'
+
+    Shopsys\FrameworkBundle\Model\Statistics\StatisticsFacade: '@App\Model\Statistics\StatisticsFacade'
+
+    Shopsys\FrameworkBundle\Model\Statistics\StatisticsProcessingFacade: '@App\Model\Statistics\StatisticsProcessingFacade'
