--- a/config/services/cron_images.yaml
+++ b/config/services/cron_images.yaml
@@ -6,7 +6,7 @@ services:
 
     App\Model\Product\Transfer\ProductImageImportCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '5,10,20,25,35,40,50,55', readableName: 'Import obrázků k produktům z Pohoda IS', instanceName: images }
+            - { name: shopsys.cron, hours: '1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21', minutes: '5,10,20,25,35,40,50,55', readableName: 'Import obrázků k produktům z Pohoda IS', instanceName: images }
 
     App\Model\Product\Translation\ProductTranslationCronModule:
         tags:
