--- a/config/services/cron_products.yaml
+++ b/config/services/cron_products.yaml
@@ -21,7 +21,7 @@ services:
 
     App\Model\Product\Transfer\ProductImportCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import změněných produktů a zařazení produktů do kategorií z Pohoda IS', instanceName: products }
+            - { name: shopsys.cron, hours: '1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21', minutes: '*', readableName: 'Import změněných produktů a zařazení produktů do kategorií z Pohoda IS', instanceName: products }
 
     Shopsys\FrameworkBundle\Model\Product\ProductVisibilityImmediateCronModule:
         tags:
@@ -38,11 +38,3 @@ services:
     Shopsys\FrameworkBundle\Model\Product\Elasticsearch\ProductExportChangedCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*', readableName: "Export změněných produktů do Elasticsearch", instanceName: products }
-
-#    App\Model\Product\Mall\MallProductExportCronModule:
-#        tags:
-#            - { name: shopsys.cron, hours: '23', minutes: '00' }
-
-#    App\Model\Product\Mall\MallProductDeleteCronModule:
-#        tags:
-#            - { name: shopsys.cron, hours: '23', minutes: '00', readableName: 'Smazání produktů z Mall' }
