--- a/config/services/cron_stocks.yaml
+++ b/config/services/cron_stocks.yaml
@@ -7,4 +7,4 @@ services:
     # ALWAYS -----------------------------------------------------------------------------------------
     App\Model\Product\Transfer\ProductExternalStockQuantityImportCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Import skladových zásob externího skladu z Pohoda IS', instanceName: stocks }
+            - { name: shopsys.cron, hours: '1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21', minutes: '*', readableName: 'Import skladových zásob externího skladu z Pohoda IS', instanceName: stocks }
