--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
     "private": true,
     "scripts": {
         "dev-server": "encore dev-server",
+        "predev": "npm run generate-webfont",
         "dev": "encore dev",
+        "prewatch": "npm run generate-webfont",
         "watch": "encore dev --watch",
+        "prebuild": "npm run generate-webfont",
         "build": "encore production --progress",
+        "generate-webfont": "./assets/js/bin/generateWebfonts.js",
         "copy-assets": "./assets/js/bin/copyAssets.js",
         "trans": "./assets/js/bin/trans.js",
         "trans:dump": "./assets/js/bin/transDump.js",
@@ -20,6 +24,7 @@
         "@babel/preset-env": "^7.9.0",
         "@babel/traverse": "^7.9.0",
         "@symfony/webpack-encore": "^0.28.0",
+        "@vusion/webfonts-generator": "^0.7.3",
         "autoprefixer": "^9.4.4",
         "babel-jest": "^25.1.0",
         "copy-webpack-plugin": "^5.1.1",
@@ -45,7 +50,6 @@
         "stylelint": "^11.1.1",
         "stylelint-webpack-plugin": "^1.2.3",
         "svgo": "1.2.2",
-        "webfonts-generator": "^0.4.0",
         "webpack-livereload-plugin": "^2.3.0",
         "webpack-notifier": "^1.6.0"
     },
