--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@ GOOGLE_API_KEY=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 ###< google/apiclient ###
+
+###> sentry/sentry-symfony ###
+SENTRY_DSN=
+SENTRY_ENVIRONMENT=
+SENTRY_RELEASE=
+###< sentry/sentry-symfony ###
