--- a/config/paths.yaml
+++ b/config/paths.yaml
@@ -16,6 +16,7 @@ parameters:
     shopsys.front_design_image_url_prefix: /public/frontend/images/
     shopsys.image_config_filepath: '%shopsys.root_dir%/config/images.yaml'
     shopsys.image_dir: '/web%shopsys.image_url_prefix%'
+    shopsys.product_images_dir: '%shopsys.image_dir%product/'
     shopsys.image_url_prefix: '/%shopsys.content_dir_name%/images/'
     shopsys.javascript_sources_dir: '%shopsys.resources_dir%/scripts'
     shopsys.javascript_url_prefix: /assets/scripts/
