--- a/config/services/commands.yaml
+++ b/config/services/commands.yaml
@@ -44,3 +44,6 @@ services:
     App\Command\Migrations\ImportOtherLegacyUrlsCommand:
         arguments:
             $shopsysMigrationsDirPath: '%shopsys.migrations_dir%'
+
+    App\Command\SeoRenameProductImagesCommand:
+        arguments: ['%shopsys.image_dir%']
