--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
         "minilazyload": "^2.3.3",
         "nestedSortable": "^1.3.4",
         "selectric": "^1.13.0",
-        "slick-carousel": "1.6.0"
+        "slick-carousel": "1.6.0",
+        "vanilla-cookieconsent": "^2.7.2"
     }
 }
